--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,7 +15,7 @@
         android:id="@+id/ouiOuiTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="OuiOui"
+        android:text="@string/ouiouiTitleText"
         android:textSize="36sp"
         android:textStyle="bold"
         android:textColor="?attr/colorOnBackground"
@@ -26,7 +26,7 @@
         android:id="@+id/textViewSecondaryHomeTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Explore beautiful destinations 🌍"
+        android:text="@string/exploreBeautifulDestinationsText"
         android:textSize="16sp"
         android:textStyle="bold"
         android:textColor="?attr/colorOnBackground"
@@ -54,7 +54,7 @@
             android:layout_gravity="center"
             android:src="@drawable/ic_search"
             app:tint="?attr/colorOnSurface"
-            android:contentDescription="Search"/>
+            android:contentDescription="@string/searchIconDescText"/>
     </com.google.android.material.card.MaterialCardView>
 
 
@@ -63,7 +63,7 @@
         android:id="@+id/textViewFeaturedDestinationTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Featured Destination"
+        android:text="@string/featuredDestinationHeaderText"
         android:textSize="22sp"
         android:textStyle="bold"
         android:textColor="?attr/colorOnBackground"
@@ -102,7 +102,7 @@
         android:id="@+id/textViewDiscoverDestinationsTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Discover"
+        android:text="@string/discoverHeaderText"
         android:textSize="22sp"
         android:textStyle="bold"
         android:textColor="?attr/colorOnBackground"
