--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -5,6 +5,5 @@
     <color name="text_primary_light">#FFFFFF</color>
     <color name="text_secondary_light">#AAAAAA</color>
     <color name="card_background_light">#2D2D2D</color>
-
-
+    <color name="divider">#E0E0E0</color>
 </resources>
