--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -41,6 +41,5 @@
     <color name="darkGray">#424242</color>
     <color name="gray">#9E9E9E</color>
     <color name="blue">#2196F3</color>
-
-
+    <color name="divider">#E0E0E0</color>
 </resources>
