--- a/app/src/main/res/layout-land/fragment_search.xml
+++ b/app/src/main/res/layout-land/fragment_search.xml
@@ -38,7 +38,7 @@
         app:layout_constraintTop_toBottomOf="@id/searchSubtitle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:background="?attr/colorSurface"
+        android:background="@drawable/bg_search_bar"
         android:padding="8dp"
         android:elevation="8dp"
         android:gravity="center"
