--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -38,13 +38,14 @@
         app:layout_constraintTop_toBottomOf="@id/searchSubtitle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:background="?attr/colorSurface"
+        android:background="@drawable/bg_search_bar"
         android:padding="8dp"
         android:elevation="8dp"
         android:gravity="center"
         android:layout_marginTop="18dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp">
+
 
         <ImageView
             android:layout_width="24dp"
