Added events page

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -10,15 +10,14 @@
     android:background="?android:attr/colorBackground"
     tools:context=".MainActivity">
 
-    <!-- Vertical Nav Bar on the left -->
     <LinearLayout
         android:id="@+id/customBottomNav"
         android:layout_width="96dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:background="@drawable/bg_bottom_nav"
-        android:paddingTop="32dp"
-        android:paddingBottom="32dp"
+        android:paddingTop="20dp"
+        android:paddingBottom="20dp"
         android:paddingStart="4dp"
         android:paddingEnd="4dp"
         android:elevation="8dp"
@@ -34,7 +33,7 @@
             android:id="@+id/nav_home"
             style="@style/CustomNavItem"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="8dp"
             android:gravity="center_horizontal"
             android:orientation="vertical"
             android:tag="homeFragment">
@@ -65,7 +64,7 @@
             android:orientation="vertical"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:layout_marginBottom="20dp">
+            android:layout_marginBottom="8dp">
 
             <ImageView
                 android:id="@+id/nav_search_icon"
@@ -93,7 +92,7 @@
             android:orientation="vertical"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:layout_marginBottom="20dp">
+            android:layout_marginBottom="8dp">
 
             <ImageView
                 android:id="@+id/nav_saved_icon"
@@ -106,6 +105,32 @@
             <TextView
                 android:id="@+id/nav_saved_text"
                 android:text="@string/navSavedText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/nav_text_color"
+                android:textSize="13sp"
+                android:layout_marginTop="4dp"/>
+        </LinearLayout>
+
+        <!-- Events -->
+        <LinearLayout
+            android:id="@+id/nav_events"
+            style="@style/CustomNavItem"
+            android:tag="savedFragment"
+            android:orientation="vertical"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:layout_marginBottom="8dp">
+            <ImageView
+                android:id="@+id/nav_events_icon"
+                android:src="@drawable/ic_event"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                app:tint="@color/nav_icon_color" />
+
+            <TextView
+                android:id="@+id/nav_events_text"
+                android:text="@string/navEventsText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/nav_text_color"
