--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -32,4 +32,9 @@
         tools:layout="@layout/fragment_settings">
     </fragment>
 
+    <fragment
+        android:id="@+id/eventsFragment"
+        android:name="com.sharks.ouioui.ui.events.EventsFragment"
+        tools:layout="@layout/fragment_events" />
+
 </navigation>
